tests/diagnostic_golden_cc/semantic_expr_operands.diag
error[CF3119]: invalid operand type for expression operator
  --> tests/diagnostic_golden_cc/semantic_expr_operands.f:3:13
   = stage: semantic
   = help: see docs/errors.md#CF3119
  |
3 |       I='A'+1
  |             ^
   = note: Arithmetic operators require operands from compatible intrinsic categories.
   = help: Convert CHARACTER or LOGICAL operands before using arithmetic operators.
